--- a/templates/index.html
+++ b/templates/index.html
@@ -36,61 +36,61 @@
             <div name="B0BZ3MGYXL" style="width: 100%; height:680px; background: url('{{ promote_info.0.img }}') no-repeat 50% 50%; background-size: cover;">
                 <div id="leo" class="banner-tip">
                     <div>
-                        <h1 class="stronger">{{ promote_info.0.bullet_point_01 }}</h1>
+                        <a href="{{ promote_info.0.url }}"><h1 class="stronger">{{ promote_info.0.bullet_point_01 }}</h1></a>
                     </div>
                     <!-- <div>
                         <span>{{ promote_info.0.bullet_point_02 }}</span>
                         <h2>{{ promote_info.0.bullet_point_03 }}</h2>
                     </div> -->
-                    <div>
-                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.0.url }}" class="learnMore">Learn more</a></h3>
-                    </div>
+                    <!-- <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <a href="{{ promote_info.0.url }}" class="learnMore">Learn more</a>
+                    </div> -->
                 </div>
             </div>
             <div name="B0C6F3CK4F" style="height:680px; background: url('{{ promote_info.1.img }}') no-repeat 50% 50%; background-size: cover;">
                 <div id="2" class="banner-tip" style="display: none;">
                     <div>
-                        <h1 class="stronger">{{ promote_info.1.bullet_point_01 }}</h1>
+                        <a href="{{ promote_info.1.url }}"><h1 class="stronger">{{ promote_info.1.bullet_point_01 }}</h1></a>
                     </div>
                     <!-- <div>
                         <span>{{ promote_info.1.bullet_point_02 }}</span>
                         <h2>{{ promote_info.1.bullet_point_03 }}</h2>
                     </div> -->
-                    <div>
-                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.1.url }}" class="learnMore">Learn more</a></h3>
-                    </div>
+                    <!-- <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <a href="{{ promote_info.1.url }}" class="learnMore">Learn more</a>
+                    </div> -->
                 </div>
             </div>
             <div name="B0BTWT5GL8" style="height:680px; background: url('{{ promote_info.2.img }}') no-repeat 50% 50%; background-size: cover;">
                 <div id="3" class="banner-tip" style="display: none;">
                     <div>
-                        <h1 class="stronger">{{ promote_info.2.bullet_point_01 }}</h1>
+                        <a href="{{ promote_info.2.url }}"><h1 class="stronger">{{ promote_info.2.bullet_point_01 }}</h1></a>
                     </div>
                     <!-- <div>
                         <span>{{ promote_info.2.bullet_point_02 }}</span>
                         <h2>{{ promote_info.2.bullet_point_03 }}</h2>
                     </div> -->
-                    <div>
-                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.2.url }}" class="learnMore">Learn more</a></h3>
-                    </div>
+                    <!-- <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <a href="{{ promote_info.2.url }}" class="learnMore">Learn more</a>
+                    </div> -->
                 </div>
             </div>
             <div name="B0C1MVT741" style="height:680px; background: url('{{ promote_info.3.img }}') no-repeat 50% 50%; background-size: cover;">
                 <div id="4" class="banner-tip" style="display: none;">
                     <div>
-                        <h1 class="stronger">{{ promote_info.3.bullet_point_01 }}</h1>
+                        <a href="{{ promote_info.3.url }}"><h1 class="stronger">{{ promote_info.3.bullet_point_01 }}</h1></a>
                     </div>
                     <!-- <div>
                         <span>{{ promote_info.3.bullet_point_02 }}</span>
                         <h2>{{ promote_info.3.bullet_point_03 }}</h2>
                     </div> -->
-                    <div>
-                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
+                    <!-- <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
                         <h3><a href="{{ promote_info.3.url }}" class="learnMore">Learn more</a></h3>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -99,9 +99,9 @@
     <!---------- promote-sku ---------->
     <div class="wrap">
         <div class="container flex-container promote-sku">
-            <div><img src="{{ product_info.10.first_img }}" style="width: auto; height: 100%;" alt=""></div>
+            <div><img src="{{ product_info.10.first_img }}" alt=""></div>
             <div>
-                <div><h1>{{ product_info_title.0 }}</h1></div>
+                <div><h2>{{ product_info_title.0 }}</h2></div>
                 <div><p>{{ product_info_title.1 }}</p></div>
                 <div>
                     <span class="flex-container price">
