--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -20,17 +20,12 @@ h1
 {
   font-size: 30px;
   line-height: 33px;
-  /* font-weight: normal; */
   font-weight: 600;
 }
 h2
 {
-  /* color: #666; */
   font-size: 24px;
-  /* line-height: 24px; */
-  /* font-weight: normal; */
   font-weight: 600;
-  /* width: 100%; */
   margin: 0;
   padding: 0;
 }
@@ -64,11 +59,12 @@ h4
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* .stronger
+.stronger
 {
-  font-size: 56px;
-  line-height: 60px;
-} */
+  font-size: 86px;
+  line-height: 86px;
+  font-weight: 680;
+}
 .price > span
 {
   font-size: 12px;
@@ -118,9 +114,14 @@ h4
   }
   h1
   {
-    font-size: 58px;
+    font-size: 56px;
     line-height: 60px;
     font-weight: normal;
+  }
+  .stronger
+  {
+    font-size: 130px;
+    line-height: 130px;
   }
   .price > span
   {
