--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -95,7 +95,8 @@ wrap > container > grid
   {
     display: grid;
     /* grid-gap: 8% 2%; */
-    grid-gap: 60px 30px;
+    row-gap: 60px;
+    column-gap: 3%;
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     grid-template-rows: auto;
     /* margin-top: 3%; */
@@ -139,11 +140,12 @@ wrap > container > grid
   .grid-container
   {
     display: grid;
-    grid-gap: 30px;
-    grid-template-columns: repeat(2, auto);
+    row-gap: 30px;
+    column-gap: 3%;
+    grid-template-columns: repeat(2, 48.5%);
     /* grid-template-rows: repeat(12, auto); */
-    margin-top: 3%;
-    margin-bottom: 20%;
+    /* margin-top: 3%; */
+    /* margin-bottom: 20%; */
     /* margin-left: 1%;
     margin-right: 1%; */
   }
@@ -151,7 +153,7 @@ wrap > container > grid
   .grid-listing
   {
     display: grid;
-    grid-gap: 0 2%;
+    column-gap: 2%;
     grid-template-columns: repeat(1, 100%);
   }
   /* listing end*/
