--- a/static/css/main.css
+++ b/static/css/main.css
@@ -43,20 +43,14 @@ body[page_id = 'account'] > .wrap
 nav
 {
   background: #f5f5f5;
-  /* background: rgba(253, 253, 253, 0.2); */
   width: 100%;
-  /* position: absolute;
-  top: 0;
-  z-index: 1; */
 }
 
 
 main
 {
   width: auto;
-  /* padding-top: 1%; */
-  margin-top: 1%;
-  margin-bottom: 1%;
+  margin: 3% 0;
 }
 /* main > div.container
 {
@@ -122,10 +116,7 @@ footer
   background: #f5f5f5;
   border-top: 1px solid #f5f5f5;
   margin-top: auto;
-  /* position: absolute;
-  bottom: -300px; */
-  /* padding-top: 2%; */
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 footer *
 {
@@ -161,6 +152,10 @@ footer *
 
 @media screen and (max-width:980px)
 {
+  main
+  {
+    margin: 0;
+  }
   body[page_id = 'account'] > .wrap
   {
     margin: 3% 0;
@@ -173,7 +168,7 @@ footer *
   footer
   {
     width: 90%;
-    padding: 0 5%;
+    padding: 5%;
   }
   footer *
   {
