--- a/templates/products.html
+++ b/templates/products.html
@@ -12,11 +12,11 @@
 
     <main class="wrap">
         
-        <div class="container">&nbsp;&nbsp;result over {{ lenth }}</div>
+        <!-- <div class="container">&nbsp;&nbsp;result over {{ lenth }}</div> -->
 
         <div class="container grid-container products">
             {% for product_info in product_info %}
-            <div class="margin-around">
+            <div>
                 <div><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
                 <div><h2><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></h2></div>
                 <div>
