--- a/templates/edit-coupon.html
+++ b/templates/edit-coupon.html
@@ -16,7 +16,7 @@
         <div class="container">
             
             <!-- <form class="login" action="/JAL/coupon&=public-done" method="post"> -->
-            <form class="login" action="{{ nav_admin.CouponRelease }}=create-done" method="post">
+            <form class="login" action="{{ nav_admin.CouponRelease }}={{ coupon_info.coupon_code }}-edit-done" method="post">
                 {%csrf_token%}
                 <br>
                 <div class="container" style="border: 1px dashed #ff8800; border-radius: 6px;">
@@ -33,10 +33,10 @@
                 <fieldset>
                     <legend>Create Coupon</legend>
                     <div class="asin">
-                        Title: <input id="" type="text" name="title" value="">
+                        Title: <input id="" type="text" name="title" value="{{ coupon_info.title }}">
                     </div>
                     <div class="asin">
-                        Code: <input id="" type="text" name="code" value="">
+                        Code: <input id="" type="text" name="code" value="{{ coupon_info.coupon_code }}">
                     </div>
                     <div class="asin">
                         <input type="radio" id="2" name="cash" value="2" checked />
@@ -47,7 +47,7 @@
                         <label for="5">$ 5.00</label>
                     </div>
                     <div class="asin">
-                        <input type="input" id="5" name="cash" value="01" />
+                        Status: <input type="text" name="status" value="{{ coupon_info.status }}" />
                     </div>
                 </fieldset>
                 <ul>
