--- a/templates/footer.html
+++ b/templates/footer.html
@@ -4,20 +4,20 @@
             <div>
                 <h3><b>Brand</b></h3>
                 <ul>
-                    <li><a href="">Trenovker</a></li>
-                    <li><a href="">ME AND MR. LEO</a></li>
+                    <li>Trenovker</li>
+                    <li>ME AND MR. LEO</li>
                 </ul>
             </div>
             <div>
                 <h3><b>Contact Us</b></h3>
                 <ul>
-                    <li><a href="">me.and.mr.leo.official@gmail.com</a></li>
-                    <li><a href="">me.and.mr.leo.promote@gmail.com</a></li>
+                    <li>me.and.mr.leo.official@gmail.com</li>
                 </ul>
             </div>
         </div>
         <div>
-            Copyright © 2020-{{ timezone.year }} 3.9Kr Inc. All rights reserved. 
+            <span>Copyright © 2020-{{ timezone.year }}   3.9Kr Inc. All rights reserved.</span>
+            <span>Conditions of Use Privacy Notice Your Ads Privacy Choices</span>
         </div>
     </div>
 </footer>
