--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
     {% include "nav.html" %}
     
 
-    <div class="wrap">
+    <main class="wrap">
 
         <div class="container">
             {% if page_id == 'login' %}
@@ -83,7 +83,7 @@
 
 
         
-    </div>
+    </main>
     
 
 
