--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -1,18 +1,15 @@
 @import 'fonts.css';
 @import 'layout.css';
 @import 'module.css';
-
+@font-face
+{
+  font-family: 'Eras Medium ITC';
+  /* src: url(./fonts/WendyOne-Regular.ttf); */
+  src: url(./fonts/ERASMD.TTF);
+}
 html,body *
 {
-  font-family: -apple-system,
-              BlinkMacSystemFont,
-              'Segoe UI',
-              Roboto,
-              Oxygen,
-              Ubuntu,
-              Cantarell,
-              'Open Sans',
-              sans-serif ;
+  font-family: 'Open Sans', 'OpenSans-Semibold', 'sans-serif', 'Cantarell','Ubuntu','Oxygen','-apple-system','BlinkMacSystemFont','Segoe UI', 'Roboto';
   font-size: 16px;
 }
 
@@ -61,6 +58,7 @@ h4
 }
 .stronger
 {
+  font-family: 'Eras Medium ITC';
   font-size: 86px;
   line-height: 86px;
   font-weight: 680;
@@ -92,12 +90,7 @@ h4
   color: rgb(110, 180, 125);
   /* color: rgb(80, 175, 219); */
 }
-@font-face
-{
-  font-family: 'Eras Bold ITC';
-  /* src: url(./fonts/WendyOne-Regular.ttf); */
-  src: url(./fonts/ERASBD.TTF);
-}
+
 
 /* 小于980 */
 @media screen and (max-width:980px)
