--- a/templates/account.html
+++ b/templates/account.html
@@ -26,7 +26,7 @@
     <div class="wrap">
         {% if bag %}
         <div class="container">
-            <h1>Your Shopping Bag</h1>
+            <h1>Your WishList</h1>
             <div class="flex-container" style="margin-top: 5%;">
                 {% for product_info in product_info %}
                 <div style="height: 200px; width: 200px; margin: 1%; padding: 1%;">
@@ -38,7 +38,7 @@
         </div>
         {% else %}
         <div class="container flex-container">
-            <p style="padding-top: 10px;">Your bag is empty. </p>&nbsp;&nbsp;&nbsp;<a style="color: cornflowerblue; text-decoration-line: underline;" href="/products"><h2>Shopping Now</h2></a>
+            <p style="padding-top: 10px;">Your WishList is empty. </p>&nbsp;&nbsp;&nbsp;<a style="color: cornflowerblue; text-decoration-line: underline;" href="/products"><h2>Shopping Now</h2></a>
         </div>
         {% endif %}
     </div>
@@ -48,6 +48,7 @@
             <h1>Your Coupon</h1>
             <!-- <div class="flex-container" style="margin-top: 3%; justify-content: space-between;"> -->
             <div class="flex-container">
+                {% if user_coupon %}
                 {% for coupon in user_coupon %}
                 <div class="account-coupon-card">
                     <div>
@@ -61,6 +62,9 @@
                     <span>off</span>
                 </div>
                 {% endfor %}
+                {% else %}
+                <div>COMING SOON</div>
+                {% endif %}
             </div>
             <!-- <div class="flex-container">
                 <div>
@@ -85,7 +89,7 @@
                     {% if user_account.first_name %}
                     <div><span>{{ user_account.first_name }} {{ user_account.last_name }}</span></div>
                     {% else %}
-                    <div><span style="color: #ccc;">Address</span></div>
+                    <div><span style="color: #ccc;">Name</span></div>
                     {% endif %}
                     {% if user_account.address %}
                     <div><span>{{ user_account.address }}</span></div>
@@ -107,20 +111,20 @@
                     {% else %}
                     <div><span style="color: #ccc;">Country</span></div>
                     {% endif %}
-                    {% if user_account.phone %}
+                    <!-- {% if user_account.phone %}
                     <div><span>{{ user_account.phone }}</span></div>
                     {% else %}
                     <div><span style="color: #ccc;">Phone Number</span></div>
-                    {% endif %}
+                    {% endif %} -->
                 </div>
                 <div>
                     <h3>Contact information</h3>
                     <div><span>{{ user_account.email }}</span></div>
-                    {% if user_account.phone %}
+                    <!-- {% if user_account.phone %}
                     <div><span>{{ user_account.phone }}</span></div>
                     {% else %}
                     <div><span style="color: #ccc;">Phone Number</span></div>
-                    {% endif %}
+                    {% endif %} -->
                 </div>
             </div>
             <form id="edit-shipping" action="/account&=edit-shipping" method="post" style="display: none;">
@@ -138,7 +142,7 @@
                         <div>LastName</div>
                         <div><input id="" type="text" name="last_name" value="{{ user_account.last_name }}"></div>
                         <div>Address</div>
-                        <div><input id="" type="text" name="address" value="{{ user_account.address }}"></div>
+                        <div><input id="" type="text" name="address" placeholder="Address:" value="{{ user_account.address }}"></div>
                         <div>Street</div>
                         <div><input id="" type="text" name="street" value="{{ user_account.street }}"></div>
                         <div>City</div>
@@ -151,8 +155,8 @@
                     <div>
                         <h3>Contact information</h3>
                         <div>{{ user_account.email }}</div>
-                        <div>Phone Number</div>
-                        <div><input id="" type="text" name="phone" value="{{ user_account.phone }}"></div>
+                        <!-- <div>Phone Number</div>
+                        <div><input id="" type="text" name="phone" value="{{ user_account.phone }}"></div> -->
                     </div>
                     <div onclick="widget('close')">X</div>
                 </div>
