--- a/templates/done.html
+++ b/templates/done.html
@@ -64,6 +64,16 @@
             </div>
             <!-- <div><img src="{{ img }}" alt=""></div> -->
         </div>
+
+        {% elif counpon_edit %}
+        <div class="container">
+            <div style="margin: 20px 0 20px 0;"><h1>{{ tip }}</h1></div>
+            
+            <div style="margin: 20px 0 20px 0;">
+                <a style="font-size: 20px;" href="{{ back }}">CouponRelease</a>
+            </div>
+            <!-- <div><img src="{{ img }}" alt=""></div> -->
+        </div>
         {% endif %}
     </div>
     
