--- a/templates/manage-coupon.html
+++ b/templates/manage-coupon.html
@@ -25,16 +25,19 @@
         <div class="container">
             {% for coupon_info in coupon_info %}
             <br>
-            <fieldset>
-                <legend>Coupon {{ coupon_info.created_at.year }}-{{ coupon_info.created_at.month }}-{{ coupon_info.created_at.day }} {{ coupon_info.created_at.time }}</legend>
-                <div class="asin">Title: {{ coupon_info.title }}</div>
-                <div class="asin">Code: {{ coupon_info.coupon_code }}</div>
-                <!-- <div class="asin">Cash: $ 5.00</div>
-                <div class="asin">Created at: {{ created_at }}</div>
-                <div class="asin">Start at: 20231102</div>
-                <div class="asin">End at: 20231202</div>
-                <div class="asin">Run</div> -->
-            </fieldset>
+            <a href="{{ nav_admin.CouponRelease }}={{ coupon_info.coupon_code }}-edit">
+                <fieldset>
+                    <legend>Coupon {{ coupon_info.created_at.year }}-{{ coupon_info.created_at.month }}-{{ coupon_info.created_at.day }} {{ coupon_info.created_at.time }}</legend>
+                    <div class="asin">{{ coupon_info.status }}</div>
+                    <div class="asin">Title: {{ coupon_info.title }}</div>
+                    <div class="asin">Code: {{ coupon_info.coupon_code }}</div>
+                    <!-- <div class="asin">Cash: $ 5.00</div>
+                    <div class="asin">Created at: {{ created_at }}</div>
+                    <div class="asin">Start at: 20231102</div>
+                    <div class="asin">End at: 20231202</div>
+                    <div class="asin">Run</div> -->
+                </fieldset>
+            </a>
             {% endfor %}
         </div>
 
