--- a/templates/index.html
+++ b/templates/index.html
@@ -119,7 +119,7 @@
         <div class="container grid-container products">
             <div>
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.0.title }}</a></div>
+                <div class="title"><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3"><h1>{{ product_info.0.title }}</h1></a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -133,7 +133,7 @@
             </div>
             <div>
                 <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.6.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3">{{ product_info.6.title }}</a></div>
+                <div class="title"><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3"><h1>{{ product_info.6.title }}</h1></a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -144,7 +144,7 @@
             </div>
             <div>
                 <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.7.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}" title="{{ product_info.7.title }}" class="display-row-3">{{ product_info.7.title }}</a></div>
+                <div class="title"><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}" title="{{ product_info.7.title }}" class="display-row-3"><h1>{{ product_info.7.title }}</h1></a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -158,7 +158,7 @@
             </div>
             <div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
+                <div class="title"><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3"><h1>{{ product_info.8.title }}</h1></a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -169,7 +169,7 @@
             </div>
             <div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.9.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
+                <div class="title"><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3"><h1>{{ product_info.9.title }}</h1></a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
