--- a/templates/products.html
+++ b/templates/products.html
@@ -18,7 +18,7 @@
             {% for product_info in product_info %}
             <div>
                 <div><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
-                <div><h2><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></h2></div>
+                <div class="title"><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}"><h1 class="display-row-3">{{ product_info.title }}</h1></a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
